fixed the scaling/distortion of the left side image

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -53,8 +53,8 @@ div.post-entry param.hidde-after-preview + *, div.post-entry div.hidde-after-pre
   /*overflow: hidden;*/
   flex-grow: 1;
   flex-shrink: 2;
-  /*aspect-ratio: 1;*/
-  flex-basis: 18vw;
+  aspect-ratio: 1;
+  /*flex-basis: 18vw;*/
 }
 .flex-item-center {
   overflow-y: hidden;
@@ -153,6 +153,17 @@ div.right-main-well-flex {
   }
   .intro-header .page-heading h1 {
     font-size: 60px;
+  }
+}
+
+
+/* shift the middle content to the left, if the left side image is visible */
+.col-lg-offset-1 {
+  margin-left: 0%;
+}
+@media (max-width: 1280px) and (max-height: 900px) {
+  .col-lg-offset-1 {
+    margin-left: 8.33333333%;
   }
 }
 
